--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
+    <head>
+    </head>
     <body>
         <header>
             <img class="icons" src="https://mars.algoritmika.org/uploads/2020/12/painter-161318_1280_0_1606929818.png"/>
